# skill-issue

./: CONTRIBUTING.md  README.md  SKILL.md  pyproject.toml
.claude-plugin/: plugin.json
.github/workflows/: publish.yml  test.yml
assets/: config-template.yaml
assets/demo/: skill-issue-demo.cast
references/knowledge_graphs/: algorithms.json  backend-systems.json  computer-science.json  design-systems.json  devops.json  machine-learning.json  mobile.json  quantum-ml.json  web-frontend.json
scripts/: bump-version.sh  export_stats.py  generate_demo.py  generate_terminal_svg.py  terminal_style.py
skill_issue/: SKILL.md  analyzer.py  cli.py  generate_report.py  graph_viz.py  init_profile.py  knowledge_state.py  onboarding.py  update_score.py  web_viz.py
skill_issue.egg-info/: PKG-INFO  SOURCES.txt
skill_issue_cc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
skills/skill-issue/: SKILL.md
skills/skill-issue/references/: challenge-design.md  interaction-patterns.md  scoring-and-adaptation.md
tests/: __init__.py  test_analyzer.py  test_cli.py  test_install_smoke.py  test_knowledge_state.py  test_onboarding.py  test_scoring.py
