[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skill-issue-cc"
version = "1.2.0"
description = "Gamified active learning system for agentic coding sessions"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["claude", "claude-code", "ai", "learning", "gamification", "spaced-repetition"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
skill-issue = "skill_issue.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["skill_issue*"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.package-data]
skill_issue = ["SKILL.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
